--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^12.7.0",
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "sass-embedded": "^1.97.1",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4",
